--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@
   width: 100vw;
   height: 100vh;
 }
+
+.menu {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	height: calc(45% - 20px);
+	width: calc(100% - 20px);
+	padding: 10px;
+	background-color: #05ffa1;
+}
