--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   height: 100vh;
 }
 
+.view {
+  height: 55%; 
+  position: relative;
+  user-select: none;
+}
+
 .menu {
 	display: flex;
 	flex-direction: row;
