--- a/src/Store.css
+++ b/src/Store.css
@@ -1,23 +1,29 @@
 .component-store {
-	width: 25%;
+	width: 415px;
 	background-color: #fffb96;
+	overflow-y: hidden;
 }
 
 .component-tab {
 	height: 40px;
-	padding: 10px;
-	width: 140px;
+	width: 33.33%;
+	margin: auto;
+	text-align: center;
 }
 
 .component-catalog {
 	padding: 4px;
 	display: flex;
 	flex-direction: column;
+	height: 100%;
+	overflow-y: scroll;
 }
 
 .tab-nav {
 	background-color: #05ffa1;
-} 
+	display: flex;
+	flex-direction: row;
+}
 
 .row {
 	display: flex;
