--- a/src/Statistics.css
+++ b/src/Statistics.css
@@ -4,3 +4,12 @@
 	padding: 0 20px;
 	overflow-y: scroll;
 }
+
+.component-stat {
+	font-size: 1.15em;
+	padding-bottom: .5em;
+}
+
+.label {
+	font-weight: bold;
+}
