--- a/src/Message.css
+++ b/src/Message.css
@@ -6,13 +6,15 @@
   color: white;
   font-size: 1.5em;
   padding: .5em;
-  -webkit-animation: fadeOut 2s;
-  animation: fadeOut 2s;
   user-select: none;
+}
+
+.message-fade {
+  -webkit-animation: fadeOut 1s 1;
+  animation: fadeOut 1s 1;
 }
 
 @keyframes fadeOut {
   0% { opacity: 1; }
-  75% { opacity: 1; }
   100% { opacity: 0; }
 }
