Revert "css tweaks"
This reverts commit c736b87af14edc3378c08836dd083e4a56391d80.

--- a/src/Store.css
+++ b/src/Store.css
@@ -1,7 +1,7 @@
 /* TODO: create media queries for store width */
 .component-store {
-	width: 50%;
-
+	width: 25%;
+	max-width: 415px;
 	background-color: #fffb96;
 	padding: 0 4px;
 	display: flex;
