--- a/src/Item.css
+++ b/src/Item.css
@@ -1,8 +1,4 @@
 .component-item {
-	position: relative;
-}
-
-.item {
 	height: 110px;
 	width: 110px;
 	display: flex;
@@ -14,8 +10,16 @@
 	position: relative;
 }
 
-.item:hover {
+.available:hover {
 	background-color: aqua;
+}
+
+.available {
+	background-color: aquamarine;
+}
+
+.unavailable {
+	background-color: gray;
 }
 
 .item-name {
