--- a/src/Item.css
+++ b/src/Item.css
@@ -57,7 +57,7 @@
   /* Position the tooltip text - see examples below! */
   position: absolute;
   width: 100%;
-	right: 0;
+	right: -10%;
 	top: auto;
 	z-index: 10;
   bottom: 100%;
