--- a/src/Store.css
+++ b/src/Store.css
@@ -54,17 +54,17 @@
 
 /* Tooltip text */
 .tooltip {
-  background-color: black;
-  color: white;
+  position: fixed;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  position: absolute;
+  flex-direction: column;
+  background-color: black;
+  color: white;
   padding: 10px;
-  width: 200px;
+  border-radius: 6px;
+  width: 250px;
   min-height: 50px;
   z-index: 999;
   user-select: none;
@@ -80,4 +80,8 @@
   border-width: 5px;
   border-style: solid;
   border-color: black transparent transparent transparent;
+}
+
+.modifier {
+	color: yellow;
 }
