--- a/src/Item.css
+++ b/src/Item.css
@@ -14,6 +14,10 @@
 	background-color: aquamarine;
 }
 
+.temp-unavailable {
+	background-color: darkgray;
+}
+
 .unavailable {
 	background-color: gray;
 }
