--- a/src/Item.css
+++ b/src/Item.css
@@ -1,4 +1,5 @@
 .component-item {
+	cursor: pointer;
 	height: 110px;
 	width: 110px;
 	margin: 4px;
@@ -50,11 +51,16 @@
 	color: white;
 }
 
+.name-unavailable {
+	color: lightgray;
+}
+
 .item-cost {
 	position: absolute;
 	padding: 1px;
 	top: 0;
 	right: 0;
+	color: darkblue;
 }
 
 .item-sold {
@@ -64,6 +70,6 @@
 	top:;
 	font-size: 1.6em;
 	font-weight: bold;
-	color: hotpink;
+	color: pink;
 	transform: rotate(45deg);
 }
