--- a/src/ProgressBar.css
+++ b/src/ProgressBar.css
@@ -1,6 +1,9 @@
 .component-progress-bar {
   height: 20px;
   width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #fff;
 }
 
 .progress {
