--- a/src/Message.css
+++ b/src/Message.css
@@ -2,10 +2,10 @@
   text-align: center;
   position: absolute;
   top: 0;
-  width: calc(100vw - 1em);
+  width: calc(100% - 1em);
   color: white;
   font-size: 1.5em;
-  padding: .5em;
+  padding: 0;
   user-select: none;
 }
 
