--- a/src/Store.css
+++ b/src/Store.css
@@ -1,18 +1,18 @@
 /* TODO: create media queries for store width */
 .component-store {
-	width: 50%;
 	background-color: #fffb96;
-	margin-left: 10px;
 	display: flex;
 	flex-direction: row;
+	height: calc(100% - 360px);
 }
 
 .catalog {
 	display: flex;
 	flex-direction: column;
-	overflow-y: scroll;
 	padding: 0 4px;
 	width: 100%;
+	overflow-y: scroll;
+	scrollbar-width: none;
 }
 
 .component-store .title {
@@ -47,12 +47,7 @@
 	background-color: rgba(0,0,0,.1);
 }
 
-
-/****************
-	Tooltip css
-****************/
-
-/* Tooltip text */
+/* Tooltip Text */
 .tooltip {
   position: fixed;
   text-align: center;
@@ -70,16 +65,16 @@
   user-select: none;
 }
 
-/* Arrow below tooltip */
+/* Tooltip Arrow */
 .tooltip::after {
   content: " ";
   position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: black transparent transparent transparent;
+  right: -15px;
+  width: 0; 
+  height: 0; 
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid black;
 }
 
 .modifier {
