--- a/src/Store.css
+++ b/src/Store.css
@@ -49,7 +49,7 @@
 
 /* Tooltip Text */
 .tooltip {
-  position: fixed;
+  position: absolute;
   text-align: center;
   display: flex;
   align-items: center;
